<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraVista">

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/stringDivision"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="24dp"
        android:text="@string/stringMultiplicacion"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDivision"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/stringValor"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/stringValor"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum1" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="108dp"
        android:text="@string/stringSuma"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnResta"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2" />

    <Button
        android:id="@+id/btnMMas"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="24dp"
        android:text="@string/stringMMas"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicacion" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/stringResta"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/stringResultado"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2" />
</androidx.constraintlayout.widget.ConstraintLayout>